--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Liam Dawson"]
 
 [dependencies]
-clippy = {version = "*", optional = true}
+# clippy = {version = "*", optional = true}
 
 [workspace]
