--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Liam Dawson"]
 
 [dependencies]
 lfclib = { path = "lfclib" }
+clap = { version = "~2.26" }# , default-features = false }
 # clippy = { version = "*", optional = true }
 
 [workspace]
