--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "llcl"
+name = "lfcl"
 version = "0.1.0"
 authors = ["Liam Dawson"]
 
 [dependencies]
+lfclib = { path = "lfclib" }
+clap = { version = "~2.26" }# , default-features = false }
+# clippy = { version = "*", optional = true }
 
 [workspace]
