--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "lfcl"
 version = "0.0.1"
 authors = ["Liam Dawson"]
+description = "Small cli utility for controlling a USB Luxafor flag"
+license = "Apache-2.0/MIT"
+homepage = "https://github.com/liamdawson/lfcl/"
+repository = "https://github.com/liamdawson/lfcl.git"
 
 [dependencies]
-lfclib = { path = "lfclib" }
+lfclib = { path = "lfclib", version = "0.0.1" }
 clap = { version = "~2.26", default-features = false }
 # clippy = { version = "*", optional = true }
 
